--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "node ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "engines": {
     "node": "^12.16.1",
